--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
     rel="stylesheet">
   <!-- icon -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <!-- Chart -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 
   <title>Document</title>
 </head>
@@ -250,7 +247,7 @@
     <!-- Section Advantage -->
     <div class="container-xxl">
       <section class="advan-ctn">
-       
+
         <div class="container-lg">
           <div class="advan-content-title">
             <h2>
@@ -444,7 +441,7 @@
       <div class="data-content">
         <div class="chart-ctn">
           <div class="col right chart">
-            <canvas id="comboChart"></canvas>
+            <img src="./img/chart.png">
           </div>
           <div class="col left">
             <div class="chart-num">
@@ -466,7 +463,6 @@
           </div>
           <div class="col right ">
             <img src="./img/data1.png">
-
           </div>
 
         </div>
@@ -832,22 +828,12 @@
               </span> , alright reserves
             </p>
           </div>
-
-
         </div>
-
       </div>
     </footer>
-
-
-
-
   </div>
 
 
-
-  <!-- Chart -->
-  <script src="chart.js"></script>
 
 </body>
 
